--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         .getElementById("downloadlink1")
         .addEventListener("click", function () {
           var a = document.createElement("a");
-          a.href = "studyaicoding.pdf";
-          a.download = "studyaicoding.pdf";
+          a.href = "exstudyaicoding.pdf";
+          a.download = "exstudyaicoding.pdf";
           document.body.appendChild(a);
           a.click();
           document.body.removeChild(a);
