--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         .addEventListener("click", function () {
           var a = document.createElement("a");
           a.href = "cae_op.pdf";
-          a.download = "exstudyaicoding.pdf";
+          a.download = "cae_op.pdf";
           document.body.appendChild(a);
           a.click();
           document.body.removeChild(a);
