--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         .getElementById("downloadlink1")
         .addEventListener("click", function () {
           var a = document.createElement("a");
-          a.href = "cae_op.pdf";
-          a.download = "cae_op.pdf";
+          a.href = "cae_op1.pdf";
+          a.download = "cae_op1.pdf";
           document.body.appendChild(a);
           a.click();
           document.body.removeChild(a);
